[project]
name = "deep-research"
version = "0.1.0"
description = "An app that can search the web and validate the results."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.36.2",
    "openai>=1.95.1",
    "openai-agents>=0.1.0",
    "pydantic>=2.11.7",
]
